2013-10-22  Jes Frellsen  <frellsen@binf>

	* bin/examples/CMakeLists.txt: Added ising.cpp

2013-10-22  Jes Frellsen  <frellsen@binf>

	* bin/examples/ising.cpp: Added executable for simulating 2D Ising
	model.

	* bin/examples/Ising2dSampler.h: Added a sampler for 2D Ising
	model.

	* bin/examples/Makefile.am: Added ising model files and
	details/random_utils.h

	* bin/examples/normal.cpp: Adopted the random generators from
	random_utils.h

	* bin/examples/details/random_utils.h: Collected simple random
	generators in one file.

	* muninn/Factories/CGEfactory.h: Added missing doxygen
	documentation.

	* muninn/utils/StatisticsLogger.h: Added missing doxygen
	documentation of append_to_file and counter_offset in constructor.

	* muninn/utils/TArray.h: Added missing initializers in copy
	constructor and renamed dublicate_shape(...) ->
	duplicate_shape(...)

	* muninn/WeightSchemes/LinearPolatedInvKP.h: Added missing doxygen
	doxygen documentation of p in constructor.

	* muninn/WeightSchemes/LinearPolatedWeights.h: Added missing
	initializers of extrapolation_details, left_bound_center and
	right_bound_center.
	
	* Doxyfile: Added doxygen of bin folder.

2013-10-14  Jes Frellsen  <frellsen@binf>

	* muninn/CGE.cpp: Adopted the Estimator::new_histogram() function.

	* muninn/Estimator.h: Added pure virtual functions
	new_histogram(...).

	* muninn/GE.cpp: Made histogram a pointer and adopted the
	Estimator::new_histogram() function and the ownership rule for
	add_histogram.

	* muninn/GE.h: Made histogram a pointer and adopted the
	Estimator::new_histogram() function and the ownership rule for
	add_histogram.

	* muninn/History.h: Made add_histogram take ownership of the
	passed histogram.

	* muninn/Factories/CGEfactory.cpp: Adopted the enum for the
	estimator and made use of the generic enum stream operators.

	* muninn/Factories/CGEfactory.h: Added a enum for the estimator.

	* muninn/Histories/MultiHistogramHistory.cpp: Made add_histogram